Implemented: New feature to schedule cache flush by cron

--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -26,3 +26,9 @@
         }
     }
 }
+
+/** Scheduled Cache Flush */
+#row_webscale_varnish_flush_cache_schedule_start_time td select:nth-of-type(3),
+#row_webscale_varnish_flush_cache_schedule_start_time td span:nth-of-type(2) {
+    display: none;
+}
