--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -28,6 +28,8 @@
 }
 
 /** Scheduled Cache Flush */
+#row_webscale_varnish_flush_cache_schedule_starting_at td select:nth-of-type(3),
+#row_webscale_varnish_flush_cache_schedule_starting_at td span:nth-of-type(2),
 #row_webscale_varnish_flush_cache_schedule_start_time td select:nth-of-type(3),
 #row_webscale_varnish_flush_cache_schedule_start_time td span:nth-of-type(2) {
     display: none;
