WIC-82 add JS to hide Started At for minutes

--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -34,3 +34,7 @@
 #row_webscale_varnish_flush_cache_schedule_start_time td span:nth-of-type(2) {
     display: none;
 }
+
+#row_webscale_varnish_flush_cache_schedule_starting_at{
+    display: none;
+}
